# Datathon_DMC

./: 1.0-fs-Feature Selection.ipynb  Clustering_01.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/03_interim/: data_compromisos_v3.parquet  vars_compromisos_1.parquet  vars_compromisos_2.parquet
docs/: Diccionario de Datos.xlsx
modelo_propension/: __init__.py  dataset.py  features.py  funciones_apoyo.py  plots.py
modelo_propension/modeling/: optuna_hyperparameters.py  predict.py  train.py
notebooks/: 00 Consolidado.ipynb  1_0_lq_entrenamiento_de_modelo_inicial.ipynb  2.0-fs-feature engineering.ipynb  Clustering_01.ipynb  Clustering_02.ipynb  QA_Compromisos.ipynb  QA_Contactos.ipynb
notebooks/old/: 1.0-fs-QA.ipynb  3.0-fs-pipeline 1.ipynb
