[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "modelo_propension"
version = "0.0.1"
description = "Modelo calcula la propension o probabilidad de que cliente acepte oferta de tarjeta de credito"
authors = [
  { name = "Fabrizio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.3"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["modelo_propension"]
force_sort_within_sections = true
